Web.EducationApp | Form,User,Role Master deletion  code completed, Common Validation Encrypt, Decrypt , Form Count Header Web.Backend.NodeSQL.EducationApp | API Form,User,Role Master deletion  code completed
