# Backend.NodeSql.EducationApp/routes/admin/setup/form.route.js
@@ -5,7 +5,7 @@ const setupController = require('../../../controllers/admin/setup/form.controlle
 const router = express.Router();
 
 
-router.get('/admin/form/GetFormDetails/:PK_FormId/:RowperPage/:CurrentPage/:SearchBy/:SearchValue', setupController.GetFormDetails);
+router.get('/admin/form/GetFormDetails', setupController.GetFormDetails);
 router.post('/admin/form/AddEditFormDetails', setupController.AddEditFormDetails);
 router.delete('/admin/form/DeleteFormsDetails', setupController.DeleteFormsDetails);
 router.get('/admin/form/GetAllParentFormsList', setupController.GetAllParentFormsList);
